<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onServiceButtonClicked"
        android:text="@string/start_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_info" />

    <TableLayout
        android:id="@+id/tl_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btn_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/id"
                android:textSize="24sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_id_ans"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/tv_timestamp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/timestamp"
                android:textSize="24sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_timestamp_ans"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/temperature"
                android:textSize="24sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_temperature_ans"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/tv_pressure"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pressure"
                android:textSize="24sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_pressure_ans"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/humidity"
                android:textSize="24sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_humidity_ans"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tv_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="10"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_info" />

</android.support.constraint.ConstraintLayout>